# ebpf-firewall

./: Cargo.toml  LICENSE  README.md  build-docker-builder.sh  build-with-docker.sh
.github/workflows/: build.yml
docker/: .gitignore  docker-compose.yml
docker-builder/: Dockerfile
docker/peers/: .donoteditthisfile  wg0.conf
docker/peers/peer1/: peer1.conf
docker/peers/peer2/: peer2.conf
docker/peers/peer3/: peer3.conf
ebpf/: Cargo.toml
ebpf-firewall/: Cargo.toml
ebpf-firewall-common/: Cargo.toml
ebpf-firewall-common/src/: action_store.rs  lib.rs
ebpf-firewall-common/src/action_store/: test.rs  user.rs
ebpf-firewall-ebpf/: Cargo.toml
ebpf-firewall-ebpf/src/: bindings.rs  main.rs
ebpf-firewall/examples/: ci-run.rs  logger-firewall.rs
ebpf-firewall/src/: as_octet.rs  cidr.rs  classifier.rs  error.rs  lib.rs  logger.rs  main.rs  rule_tracker.rs
ebpf/src/: bindings.rs  main.rs
userspace/: Cargo.toml
userspace/benchmark/: Dockerfile  docker-compose.yml
userspace/docker/: Dockerfile  docker-compose.yml
userspace/ebpf-firewall/: build.rs
userspace/ebpf-firewall-common/: Cargo.toml
userspace/ebpf-firewall-common/src/: lib.rs
userspace/ebpf-firewall/src/: error.rs  lib.rs  rule_tracker.rs
userspace/firewall/: Cargo.toml  build.rs
userspace/firewall-common/: Cargo.toml
userspace/firewall-common/src/: action_store.rs  lib.rs  rule_store.rs
userspace/firewall-common/src/action_store/: test.rs  user.rs
userspace/firewall-common/src/rule_store/: lookup.rs  test.rs  user.rs
userspace/firewall/examples/: benchmark.rs  ci-run.rs  logger-firewall.rs
userspace/firewall/src/: as_octet.rs  bpf_store.rs  cidr.rs  classifier.rs  config.rs  error.rs  firewall.rs  lib.rs  logger.rs  rule.rs  rule_tracker.rs
userspace/firewall/src/rule_tracker/: rule_trie.rs  test.rs
userspace/firewall/src/rule_tracker/test/: test_data.rs
userspace/xtask/: Cargo.toml
userspace/xtask/src/: codegen.rs  main.rs  run_on.rs
xtask/src/: build_ebpf.rs  codegen.rs  run.rs
