[package]
name = "ebpf-firewall-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
ebpf-firewall-common = { path = "../userspace/ebpf-firewall-common" }
memoffset = "0.6"

[features]
wireguard = []

[[bin]]
name = "ebpf-firewall"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
