[package]
name = "ebpf-firewall"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["tokio"]
tokio = ["dep:tokio", "aya/async_tokio"]
async-std = ["dep:async-std", "aya/async_std"]

[dependencies]
aya = { version = ">=0.11" }
ebpf-firewall-common = { path = "../ebpf-firewall-common", features = ["user"] }
tracing = "0.1"
bytes = "1.2.1"
tokio = { version = "1", optional = true, default-features = false }
async-std = { version = "1", optional = true, default-features = false }
thiserror = "1"

[dev-dependencies]
tracing-subscriber = "0.3"
clap = { version = "3.1", features = ["derive"] }
tokio = { version = "1.18", default-features = false, features = [
    "signal",
    "rt",
    "macros",
    "rt-multi-thread",
] }
anyhow = "1"
libc = "0.2"
