[package]
name = "ebpf-firewall"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features = ["async_tokio"] }
aya-log = "0.1"
ebpf-firewall-common = { path = "../ebpf-firewall-common", features = ["user"] }
anyhow = "1.0.42"
clap = { version = "3.1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.18", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
bytes = "1.2.1"

[[bin]]
name = "ebpf-firewall"
path = "src/main.rs"
