[package]
name = "firewall-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", rev = "23c0460ab36e35d15a8b2d2246ebfb1e9544beeb" }
firewall-common = { path = "../userspace/firewall-common" }
memoffset = "0.6"
strum = { version = "0.24", default-features = false }

[features]
wireguard = []

[[bin]]
name = "firewall-ebpf"
path = "src/main.rs"
test = false
bench = false

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
