[package]
name = "firewall-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", rev = "88d77775530341ec32ff4f764b729e53a48c0de0" }
firewall-common = { path = "../userspace/firewall-common" }
memoffset = "0.6"
strum = { version = "0.24", default-features = false }

[features]
default = ["rules256"]
wireguard = []
rules1024 = []
rules512 = []
rules256 = []
rules128 = []
rules64 = []
rules32 = []

[[bin]]
name = "firewall-ebpf"
path = "src/main.rs"
test = false
bench = false

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
