[package]
name = "ebpf-firewall-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
user = ["aya", "thiserror"]

[dependencies]
aya = { version = ">=0.11", optional = true }
thiserror = { version = "1", optional = true }

[dev-dependencies]
test-case = "2.2"

[lib]
path = "src/lib.rs"
