[package]
name = "firewall-common"
version = "0.1.0"
edition = "2021"

[features]
default = ["maxranges256"]
user = ["aya", "thiserror", "num-derive", "num-traits", "serde"]
maxranges1024 = []
maxranges512 = []
maxranges256 = []
maxranges128 = []
maxranges64 = []
maxranges32 = []
maxranges16 = []

[dependencies]
strum = { version = "0.24", default-features = false }
strum_macros = { version = "0.24", default-features = false }
aya = { git = "https://github.com/aya-rs/aya.git", rev = "88d77775530341ec32ff4f764b729e53a48c0de0", optional = true }
thiserror = { version = "1", optional = true }
num-derive = { version = "0.3", optional = true }
num-traits = { version = "0.2", optional = true }
serde = {version = "1.0", features = ["derive"], optional = true}

[dev-dependencies]
test-case = "2.2"

[lib]
path = "src/lib.rs"
